--- a/POS.html
+++ b/POS.html
@@ -231,8 +231,8 @@
           <div class="overlay-2"></div>
 
           <h4 class="banner-text">POS</h4>
-          <h3 class="banner-tagLine">Choose your convenient pricing plan!</h3>
-          <h6 class="banner-desc">It doesn’t matter which stage of the tech journey you are in, we can help you get started with us.</h6>
+          <h3 class="banner-tagLine">Find the Perfect Plan for Your Restaurant!</h3>
+          <h6 class="banner-desc px-0 px-md-4">No matter your restaurant’s size or stage, our smart and scalable POS solution streamlines operations, optimizing orders, payments, and analytics effortlessly.</h6>
 
         </div>
       </div>
@@ -240,7 +240,85 @@
     <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
 
 
-    
+    <!-- POS - Section -->
+    <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
+    <div class="pos-wrapper py-5">
+      <div class="container">
+        <div class="pos-container pt-4">
+
+          <!-- section-1 -->
+          <div class="row align-items-center mb-5">
+            <div class="col-12 col-lg-5 section-1 mb-4 mb-lg-0">
+              <div class="img-section">
+                <img src="Images/POS-Page/Maghil-POS.png" alt="" class="img-fluid">
+              </div>
+            </div>
+            <div class="col-12 col-lg-7 section-1 parent-overlay px-3">
+              <div class="child-overlay"></div>
+              <div class="content-section">
+                <div class="heading-content">
+                  <h3 class="text-center text-sm-start">Streamline Your Restaurant Operations</h3>
+                  <h6>Our POS system simplifies transactions, inventory, and customer management for seamless efficiency.</h6>
+                </div>
+                <div class="sub-content">
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Fast and secure billing with real-time transaction tracking.</p>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Efficient inventory and staff management to reduce operational costs.</p>
+                  <h6>Upgrade your restaurant experience with an all-in-one POS solution tailored for growth.</h6>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- section-2 -->
+          <div class="row align-items-center mb-5">
+            <div class="col-12 col-lg-7 section-1 order-2 order-lg-1 parent-overlay px-3">
+              <div class="child-overlay"></div>
+              <div class="content-section">
+                <div class="heading-content">
+                  <h3 class="text-center text-sm-start">POS on the Go: Serve Customers Anywhere</h3>
+                  <h6>Enhance mobility with our Mobile POS solution, designed for fast-paced restaurant environments.</h6>
+                </div>
+                <div class="sub-content">
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Take orders and process payments from anywhere with handheld POS devices.</p>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Seamlessly sync orders with the kitchen and central POS system.</p>
+                  <h6>Deliver fast and flexible service with our mobile-friendly POS system.</h6>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-lg-5 section-1 order-1 order-lg-2 mb-4 mb-lg-0">
+              <div class="img-section">
+                <img src="Images/POS-Page/Maghil-Mobile-POS.webp" alt="" class="img-fluid">
+              </div>
+            </div>
+          </div>
+
+          <!-- section-3 -->
+          <div class="row align-items-center mb-3">
+            <div class="col-12 col-lg-5 section-1 mb-4 mb-lg-0">
+              <div class="img-section">
+                <img src="Images/POS-Page/Maghil-Cloud-POS.webp" alt="" class="img-fluid">
+              </div>
+            </div>
+            <div class="col-12 col-lg-7 section-1 parent-overlay px-3">
+              <div class="child-overlay"></div>
+              <div class="content-section">
+                <div class="heading-content">
+                  <h3 class="text-center text-sm-start">Cloud-Based POS for Smart Restaurant Management</h3>
+                  <h6>Access your business data anywhere, anytime with our secure cloud POS solution.</h6>
+                </div>
+                <div class="sub-content">
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Real-time data synchronization for multi-location restaurant management.</p>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Automatic backups and secure cloud storage to prevent data loss.</p>
+                  <h6>Stay connected and manage your restaurant effortlessly with cloud-powered efficiency.</h6>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+    <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
 
 
     <!-- Footer -->
