--- a/Adv_integration.html
+++ b/Adv_integration.html
@@ -231,8 +231,8 @@
           <div class="overlay-2"></div>
 
           <h4 class="banner-text">Advanced Integration</h4>
-          <h3 class="banner-tagLine">Choose your convenient pricing plan!</h3>
-          <h6 class="banner-desc">It doesn’t matter which stage of the tech journey you are in, we can help you get started with us.</h6>
+          <h3 class="banner-tagLine">Seamlessly Connect and Grow Your Business</h3>
+          <h6 class="banner-desc px-0 px-md-4">Elevate your restaurant operations with powerful integrations. Manage multiple locations effortlessly and connect with eCommerce platforms for a unified experience.</h6>
 
         </div>
       </div>
@@ -250,21 +250,20 @@
           <div class="row align-items-center mb-5">
             <div class="col-12 col-lg-5 section-1 mb-4 mb-lg-0">
               <div class="img-section">
-                <img src="Images/About-Page/section-1.png" alt="" class="img-fluid">
+                <img src="Images/Advanced-Integration-Page/section-1.png" alt="" class="img-fluid">
               </div>
             </div>
             <div class="col-12 col-lg-7 section-1 parent-overlay px-3">
               <div class="child-overlay"></div>
               <div class="content-section">
                 <div class="heading-content">
-                  <h3 class="text-center text-sm-start">Transform Your Business with Smart POS Solutions</h3>
-                  <h6>Maghil is designed to empower businesses with cutting-edge POS technology, ensuring seamless operations and enhanced customer experience.</h6>
+                  <h3 class="text-center text-sm-start">Seamlessly Connect and Grow Your Business</h3>
+                  <h6>Enhance your restaurant operations with powerful integrations designed to streamline workflows and improve efficiency.</h6>
                 </div>
                 <div class="sub-content">
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Effortless Transactions – Simplify sales with an intuitive and fast checkout process.</p>
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Cloud-Powered Management – Access and manage your business from anywhere, anytime.</p>
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Scalable & Customizable – Tailored solutions that grow with your business needs.</p>
-                  <h6>We blend technology and efficiency to streamline operations, optimize sales, and elevate business performance with smart, data-driven insights.</h6>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Connect multiple systems effortlessly for a smooth operational experience.</p>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Ensure seamless data synchronization across platforms.</p>
+                  <h6>Empower your business with integrated solutions that enable better decision-making and enhance customer satisfaction.</h6>
                 </div>
               </div>
             </div>
@@ -272,24 +271,23 @@
 
           <!-- section-2 -->
           <div class="row align-items-center mb-5">
-            <div class="col-12 col-lg-7 section-1 parent-overlay order-2 order-lg-1 px-3">
-              <div class="child-overlay"></div>          
+            <div class="col-12 col-lg-7 section-1 order-2 order-lg-1 parent-overlay px-3">
+              <div class="child-overlay"></div>
               <div class="content-section">
                 <div class="heading-content">
-                  <h3 class="text-center text-sm-start">Optimize Your Restaurant’s Workflow</h3>
-                  <h6>Empower your restaurant team with an efficient, AI-driven solution that enhances productivity and collaboration.</h6>
+                  <h3 class="text-center text-sm-start">Effortless Multi-Store Management</h3>
+                  <h6>Manage all your restaurant locations under one centralized system with real-time monitoring and control.</h6>
                 </div>
                 <div class="sub-content">
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Streamline operations with intelligent automation.</p>
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Improve team coordination for a smooth workflow.</p>
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Reduce manual effort and focus on delivering exceptional service.</p>
-                  <h6>From kitchen to customer, Maghil optimizes every step of the process.</h6>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Unified Dashboard – Oversee sales, inventory, and staff performance from a single platform.</p>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Automated Updates – Synchronize data across multiple locations instantly.</p>
+                  <h6>Ensure consistency in operations and customer experience across all outlets with smart automation and centralized controls.</h6>
                 </div>
               </div>
             </div>
             <div class="col-12 col-lg-5 section-1 order-1 order-lg-2 mb-4 mb-lg-0">
               <div class="img-section">
-                <img src="Images/About-Page/section-2.png" alt="" class="img-fluid">
+                <img src="Images/Advanced-Integration-Page/section-2.png" alt="" class="img-fluid">
               </div>
             </div>
           </div>
@@ -298,21 +296,20 @@
           <div class="row align-items-center mb-3">
             <div class="col-12 col-lg-5 section-1 mb-4 mb-lg-0">
               <div class="img-section">
-                <img src="Images/About-Page/section-3.png" alt="" class="img-fluid">
+                <img src="Images/Advanced-Integration-Page/section-3.png" alt="" class="img-fluid">
               </div>
             </div>
             <div class="col-12 col-lg-7 section-1 parent-overlay px-3">
               <div class="child-overlay"></div>
               <div class="content-section">
                 <div class="heading-content">
-                  <h3 class="text-center text-sm-start">Amplify Your Restaurant’s Success</h3>
-                  <h6>Maghil isn’t just a management tool; it’s a growth engine for restaurant owners.</h6>
+                  <h3 class="text-center text-sm-start">Next-Gen eCommerce Integration</h3>
+                  <h6>Expand your reach by integrating with popular eCommerce platforms for a unified business experience.</h6>
                 </div>
                 <div class="sub-content">
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Advanced analytics for data-driven decision-making.</p>
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Tools to enhance customer engagement and retention.</p>
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Scalable solutions tailored to your business needs.</p>
-                  <h6>With Maghil, take your restaurant to the next level and unlock its full potential.</h6>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Online & Offline Sync – Maintain inventory and sales updates in real-time.</p>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Third-Party Platform Compatibility – Easily connect with food delivery services and online marketplaces.</p>
+                  <h6>Enhance your business presence and increase sales with smooth digital integrations that cater to evolving customer needs.</h6>
                 </div>
               </div>
             </div>
