wrap : Solution-page

--- a/POS.html
+++ b/POS.html
@@ -250,7 +250,7 @@
           <div class="row align-items-center mb-5">
             <div class="col-12 col-lg-5 section-1 mb-4 mb-lg-0">
               <div class="img-section">
-                <img src="Images/POS-Page/Maghil-POS.png" alt="" class="img-fluid">
+                <img src="Images/POS-Page/Maghil-POS.jpg" alt="" class="img-fluid">
               </div>
             </div>
             <div class="col-12 col-lg-7 section-1 parent-overlay px-3">
