--- a/Hardware_Software.html
+++ b/Hardware_Software.html
@@ -250,21 +250,20 @@
           <div class="row align-items-center mb-5">
             <div class="col-12 col-lg-5 section-1 mb-4 mb-lg-0">
               <div class="img-section">
-                <img src="Images/About-Page/section-1.png" alt="" class="img-fluid">
+                <img src="Images/Hardware-Software-Page/Maghil-Hardware.png" alt="" class="img-fluid">
               </div>
             </div>
             <div class="col-12 col-lg-7 section-1 parent-overlay px-3">
               <div class="child-overlay"></div>
               <div class="content-section">
                 <div class="heading-content">
-                  <h3 class="text-center text-sm-start">Transform Your Business with Smart POS Solutions</h3>
-                  <h6>Maghil is designed to empower businesses with cutting-edge POS technology, ensuring seamless operations and enhanced customer experience.</h6>
+                  <h3 class="text-center text-sm-start">Reliable POS Hardware Tailored to Your Needs</h3>
+                  <h6>From self-service kiosks to customized POS terminals, we provide high-performance hardware for seamless restaurant operations.</h6>
                 </div>
                 <div class="sub-content">
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Effortless Transactions – Simplify sales with an intuitive and fast checkout process.</p>
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Cloud-Powered Management – Access and manage your business from anywhere, anytime.</p>
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Scalable & Customizable – Tailored solutions that grow with your business needs.</p>
-                  <h6>We blend technology and efficiency to streamline operations, optimize sales, and elevate business performance with smart, data-driven insights.</h6>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Versatile POS Solutions – Choose from a range of kiosks, terminals, and mobile POS systems.</p>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Scalable & Customizable – Hardware tailored to meet your restaurant’s unique requirements.</p>
+                  <h6>Equip your restaurant with the latest technology to enhance efficiency, speed, and customer satisfaction.</h6>
                 </div>
               </div>
             </div>
@@ -272,48 +271,23 @@
 
           <!-- section-2 -->
           <div class="row align-items-center mb-5">
-            <div class="col-12 col-lg-7 section-1 parent-overlay order-2 order-lg-1 px-3">
-              <div class="child-overlay"></div>          
+            <div class="col-12 col-lg-7 section-1 order-2 order-lg-1 parent-overlay px-3">
+              <div class="child-overlay"></div>
               <div class="content-section">
                 <div class="heading-content">
-                  <h3 class="text-center text-sm-start">Optimize Your Restaurant’s Workflow</h3>
-                  <h6>Empower your restaurant team with an efficient, AI-driven solution that enhances productivity and collaboration.</h6>
+                  <h3 class="text-center text-sm-start">Powerful POS Software for Smart Management</h3>
+                  <h6>Our feature-rich POS software simplifies every aspect of restaurant management, from billing to customer insights.</h6>
                 </div>
                 <div class="sub-content">
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Streamline operations with intelligent automation.</p>
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Improve team coordination for a smooth workflow.</p>
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Reduce manual effort and focus on delivering exceptional service.</p>
-                  <h6>From kitchen to customer, Maghil optimizes every step of the process.</h6>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Comprehensive Order & Menu Management – Streamline billing, dine-in, and takeaway orders effortlessly.</p>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Advanced Analytics – Gain insights into sales, inventory, and customer preferences.</p>
+                  <h6>From small cafés to enterprise chains, our software adapts to your needs, ensuring smooth and scalable restaurant operations.</h6>
                 </div>
               </div>
             </div>
             <div class="col-12 col-lg-5 section-1 order-1 order-lg-2 mb-4 mb-lg-0">
               <div class="img-section">
-                <img src="Images/About-Page/section-2.png" alt="" class="img-fluid">
-              </div>
-            </div>
-          </div>
-
-          <!-- section-3 -->
-          <div class="row align-items-center mb-3">
-            <div class="col-12 col-lg-5 section-1 mb-4 mb-lg-0">
-              <div class="img-section">
-                <img src="Images/About-Page/section-3.png" alt="" class="img-fluid">
-              </div>
-            </div>
-            <div class="col-12 col-lg-7 section-1 parent-overlay px-3">
-              <div class="child-overlay"></div>
-              <div class="content-section">
-                <div class="heading-content">
-                  <h3 class="text-center text-sm-start">Amplify Your Restaurant’s Success</h3>
-                  <h6>Maghil isn’t just a management tool; it’s a growth engine for restaurant owners.</h6>
-                </div>
-                <div class="sub-content">
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Advanced analytics for data-driven decision-making.</p>
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Tools to enhance customer engagement and retention.</p>
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Scalable solutions tailored to your business needs.</p>
-                  <h6>With Maghil, take your restaurant to the next level and unlock its full potential.</h6>
-                </div>
+                <img src="Images/Hardware-Software-Page/Maghil-Software.webp" alt="" class="img-fluid">
               </div>
             </div>
           </div>
