--- a/home.html
+++ b/home.html
@@ -575,7 +575,7 @@
             <div class="col-12 col-sm-6 col-lg-3">
               <div class="card">
                 <picture>
-                  <img src="Images/Industries/Restaurant-1.jpg" alt="" class="img-fluid">
+                  <img src="Images/Industries/Restaurant-1.png" alt="" class="img-fluid">
                 </picture>
                 <div class="card-body text-center">
                   <div class="industry-content">
@@ -592,7 +592,7 @@
             <div class="col-12 col-sm-6 col-lg-3">
               <div class="card">
                 <picture>
-                  <img src="Images/Industries/cafe.jpg" alt="" class="img-fluid">
+                  <img src="Images/Industries/Cafe-1.png" alt="" class="img-fluid">
                 </picture>
                 <div class="card-body text-center">
                   <div class="industry-content">
@@ -609,7 +609,7 @@
             <div class="col-12 col-sm-6 col-lg-3">
               <div class="card">
                 <picture>
-                  <img src="Images/Industries/Retail-1.jpg" alt="" class="img-fluid">
+                  <img src="Images/Industries/Retail-1.png" alt="" class="img-fluid">
                 </picture>
                 <div class="card-body text-center">
                   <div class="industry-content">
@@ -626,7 +626,7 @@
             <div class="col-12 col-sm-6 col-lg-3">
               <div class="card">
                 <picture>
-                  <img src="Images/Industries/Resto-Bar.jpg" alt="" class="img-fluid">
+                  <img src="Images/Industries/Restro-Bar-1.png" alt="" class="img-fluid">
                 </picture>
                 <div class="card-body text-center">
                   <div class="industry-content">
