modify: Footer-Section-Industry

--- a/about.html
+++ b/about.html
@@ -526,7 +526,7 @@
             <div class="col-12 col-sm-6 col-lg-3 p-0">
               <div class="link-container">
                 <ul class="links">
-                  <h6 class="link-heading">Features</h6>
+                  <h6 class="link-heading" style="color: #E52333;">Features</h6>
                   <li class="link d-flex align-items-center">
                     <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>Dine-In Management</a>
                   </li>
@@ -559,7 +559,7 @@
             <div class="col-12 col-sm-6 col-lg-3 p-0">
               <div class="link-container">
                 <ul class="links text-start">
-                  <h6 class="link-heading">Solutions</h6>
+                  <h6 class="link-heading" style="color: #E52333;">Solutions</h6>
                   <li class="link d-flex align-items-center">
                     <a href="POS.html"><i class="fa-regular fa-circle-right pe-2"></i>POS System</a>
                   </li>
@@ -577,21 +577,21 @@
             <div class="col-12 col-sm-6 col-lg-3 p-0">
               <div class="link-container">
                 <ul class="links text-start">
-                  <h6 class="link-heading">Explore</h6>
+                  <h6 class="link-heading" style="color: #E52333;">Explore</h6>
                   <li class="link d-flex align-items-center">
                     <a href="Pricing.html"><i class="fa-regular fa-circle-right pe-2"></i>Pricing</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="Industry_category_1.html"><i class="fa-regular fa-circle-right pe-2"></i>Category-1</a>
+                    <a href="Industry_category_1.html"><i class="fa-regular fa-circle-right pe-2"></i>Fast & Casual Eateries</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="Industry_category_2.html"><i class="fa-regular fa-circle-right pe-2"></i>Category-2</a>
+                    <a href="Industry_category_2.html"><i class="fa-regular fa-circle-right pe-2"></i>Premium & Full-Service Dining</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="Industry_category_3.html"><i class="fa-regular fa-circle-right pe-2"></i>Category-3</a>
+                    <a href="Industry_category_3.html"><i class="fa-regular fa-circle-right pe-2"></i>Large-Scale & Multi-Location Businesses</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="Industry_category_4.html"><i class="fa-regular fa-circle-right pe-2"></i>Category-4</a>
+                    <a href="Industry_category_4.html"><i class="fa-regular fa-circle-right pe-2"></i>Online & Emerging Restaurant Models</a>
                   </li>
                 </ul>
               </div>
@@ -601,7 +601,7 @@
             <div class="col-12 col-sm-6 col-lg-3 p-0">
               <div class="link-container">
                 <ul class="links text-start">
-                  <h6 class="link-heading">Resource</h6>
+                  <h6 class="link-heading" style="color: #E52333;">Resource</h6>
                   <li class="link d-flex align-items-center">
                     <a href="about.html"><i class="fa-regular fa-circle-right pe-2"></i>About Us</a>
                   </li>
