integrate : banner-images

--- a/Industry_category_2.html
+++ b/Industry_category_2.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Maghil | Category-2</title>
+    <title>Maghil | Premium & Full-Service Dining</title>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -230,9 +230,9 @@
           <div class="overlay-1"></div>
           <div class="overlay-2"></div>
 
-          <h4 class="banner-text">Category-2</h4>
-          <h3 class="banner-tagLine">Choose your convenient pricing plan!</h3>
-          <h6 class="banner-desc">It doesn’t matter which stage of the tech journey you are in, we can help you get started with us.</h6>
+          <h4 class="banner-text">Premium & Full-Service Dining</h4>
+          <h3 class="banner-tagLine">Elevate the dining experience with seamless service!</h3>
+          <h6 class="banner-desc">From table management to personalized guest experiences, our POS ensures smooth and elegant service.</h6>
 
         </div>
       </div>
