--- a/Industry_category_3.html
+++ b/Industry_category_3.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Maghil | Category-3</title>
+    <title>Maghil | Large-Scale & Multi-Location Businesses</title>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -230,9 +230,9 @@
           <div class="overlay-1"></div>
           <div class="overlay-2"></div>
 
-          <h4 class="banner-text">Category-3</h4>
-          <h3 class="banner-tagLine">Choose your convenient pricing plan!</h3>
-          <h6 class="banner-desc">It doesn’t matter which stage of the tech journey you are in, we can help you get started with us.</h6>
+          <h4 class="banner-text">Large-Scale & Multi-Location Businesses</h4>
+          <h3 class="banner-tagLine">Unify your operations across all locations!</h3>
+          <h6 class="banner-desc">Standardized workflows, centralized reporting, and real-time tracking for effortless management.</h6>
 
         </div>
       </div>
