--- a/Industry_category_4.html
+++ b/Industry_category_4.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Maghil | Category-4</title>
+    <title>Maghil | Online & Emerging Restaurant Models</title>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -230,9 +230,9 @@
           <div class="overlay-1"></div>
           <div class="overlay-2"></div>
 
-          <h4 class="banner-text">Category-4</h4>
-          <h3 class="banner-tagLine">Choose your convenient pricing plan!</h3>
-          <h6 class="banner-desc">It doesn’t matter which stage of the tech journey you are in, we can help you get started with us.</h6>
+          <h4 class="banner-text">Online & Emerging Restaurant Models</h4>
+          <h3 class="banner-tagLine">Powering the future of digital-first dining!</h3>
+          <h6 class="banner-desc">Seamlessly integrate online orders, ghost kitchens, and hybrid retail-restaurant models with an all-in-one POS.</h6>
 
         </div>
       </div>
