--- a/Industry_category_1.html
+++ b/Industry_category_1.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Maghil | Category-1</title>
+    <title>Maghil | Fast & Casual Eateries</title>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -230,9 +230,9 @@
           <div class="overlay-1"></div>
           <div class="overlay-2"></div>
 
-          <h4 class="banner-text">Category-1</h4>
-          <h3 class="banner-tagLine">Choose your convenient pricing plan!</h3>
-          <h6 class="banner-desc">It doesn’t matter which stage of the tech journey you are in, we can help you get started with us.</h6>
+          <h4 class="banner-text">Fast & Casual Eateries</h4>
+          <h3 class="banner-tagLine">Speed and convenience at every step!</h3>
+          <h6 class="banner-desc">Optimize operations with a POS system designed for quick service, mobile orders, and seamless transactions.</h6>
 
         </div>
       </div>
