inital wrap : Industry

--- a/Industry_category_2.html
+++ b/Industry_category_2.html
@@ -240,7 +240,111 @@
     <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
 
 
-    
+    <!-- Industry-category -->
+    <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
+    <div class="category-wrapper pt-4 pb-5">
+      <div class="container">
+        <div class="category-container pt-4">
+
+          <h2 class="text-center mb-4">Premium & Full-Service Dining</h2>
+          <div class="row">
+
+            <!-- Full-Service Restaurants (FSRs) -->
+            <div class="col-12 col-md-6 col-lg-4 mb-3">
+              <div class="card section-card">
+                <img src="Images/industry.webp" alt="Full-Service Restaurants" class="img-fluid">
+                <div class="card-body">
+                  <h5 class="card-title">Full-Service Restaurants (FSRs)</h5>
+                  <div>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Table management for seamless dining</p>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Split billing and multiple payment options</p>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Integrated reservation systems</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Fine Dining Establishments -->
+            <div class="col-12 col-md-6 col-lg-4 mb-3">
+              <div class="card section-card">
+                <img src="Images/industry.webp" alt="Fine Dining Establishments" class="img-fluid">
+                <div class="card-body">
+                  <h5 class="card-title">Fine Dining Establishments</h5>
+                  <div>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Advanced reservation systems</p>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Tableside ordering and personalized service</p>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Detailed menu customization</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Buffets & All-You-Can-Eat Restaurants -->
+            <div class="col-12 col-md-6 col-lg-4 mb-3">
+              <div class="card section-card">
+                <img src="Images/industry.webp" alt="Buffets & All-You-Can-Eat Restaurants" class="img-fluid">                
+                <div class="card-body">
+                  <h5 class="card-title">Buffets & All-You-Can-Eat Restaurants</h5>
+                  <div>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Table tracking and time-based pricing</p>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Automated customer flow management</p>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Real-time inventory tracking</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Bars & Nightclubs -->
+            <div class="col-12 col-md-6 col-lg-4 mb-3">
+              <div class="card section-card">
+                <img src="Images/industry.webp" alt="Bars & Nightclubs" class="img-fluid">
+                <div class="card-body">
+                  <h5 class="card-title">Bars & Nightclubs</h5>
+                  <div>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Tab management for seamless billing</p>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Age verification tools for compliance</p>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Happy hour pricing automation</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Catering Businesses -->
+            <div class="col-12 col-md-6 col-lg-4 mb-3">
+              <div class="card section-card">
+                <img src="Images/industry.webp" alt="Catering Businesses" class="img-fluid">                
+                <div class="card-body">
+                  <h5 class="card-title">Catering Businesses</h5>
+                  <div>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Event scheduling and bulk order management</p>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Invoice generation for seamless payments</p>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Custom menu planning</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Restro Bars -->
+            <div class="col-12 col-md-6 col-lg-4 mb-3">
+              <div class="card section-card">
+                <img src="Images/industry.webp" alt="Restro Bars" class="img-fluid">                
+                <div class="card-body">
+                  <h5 class="card-title">Restro Bars</h5>
+                  <div>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Table service with a bar integration</p>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Live inventory tracking for drinks</p>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Custom drink and food pairings</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+    </div>
+    <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
 
 
     <!-- Footer -->
