--- a/Industry_category_3.html
+++ b/Industry_category_3.html
@@ -240,7 +240,96 @@
     <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
 
 
-    
+    <!-- Industry-category -->
+    <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
+    <div class="category-wrapper pt-4 pb-5">
+      <div class="container">
+        <div class="category-container pt-4">
+
+          <h2 class="text-center mb-4">Large-Scale & Multi-Location Businesses</h2>
+          <div class="row">
+
+            <!-- Hotel Restaurants -->
+            <div class="col-12 col-md-6 col-lg-4 mb-3">
+              <div class="card section-card">
+                <img src="Images/industry.webp" alt="Hotel Restaurants" class="img-fluid">
+                <div class="card-body">
+                  <h5 class="card-title">Hotel Restaurants</h5>
+                  <div>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Seamless integration with hotel management systems</p>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Room service ordering and billing automation</p>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Customizable menu based on guest preferences</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Enterprise Chain Restaurants -->
+            <div class="col-12 col-md-6 col-lg-4 mb-3">
+              <div class="card section-card">
+                <img src="Images/industry.webp" alt="Enterprise Chain Restaurants" class="img-fluid">
+                <div class="card-body">
+                  <h5 class="card-title">Enterprise Chain Restaurants</h5>
+                  <div>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Centralized menu and pricing management</p>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Multi-location sales and inventory tracking</p>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Data-driven insights for performance optimization</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Multi-Location Franchises -->
+            <div class="col-12 col-md-6 col-lg-4 mb-3">
+              <div class="card section-card">
+                <img src="Images/industry.webp" alt="Multi-Location Franchises" class="img-fluid">                
+                <div class="card-body">
+                  <h5 class="card-title">Multi-Location Franchises</h5>
+                  <div>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Consistent branding across all locations</p>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Franchise-wide reporting and analytics</p>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Automated supply chain management</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Ghost Kitchens & Virtual Brands -->
+            <div class="col-12 col-md-6 col-lg-4 mb-3">
+              <div class="card section-card">
+                <img src="Images/industry.webp" alt="Ghost Kitchens & Virtual Brands" class="img-fluid">
+                <div class="card-body">
+                  <h5 class="card-title">Ghost Kitchens & Virtual Brands</h5>
+                  <div>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Optimized for online and delivery-only models</p>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Third-party delivery platform integrations</p>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Menu rotation and brand expansion flexibility</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Corporate Cafeterias -->
+            <div class="col-12 col-md-6 col-lg-4 mb-3">
+              <div class="card section-card">
+                <img src="Images/industry.webp" alt="Corporate Cafeterias" class="img-fluid">                
+                <div class="card-body">
+                  <h5 class="card-title">Corporate Cafeterias</h5>
+                  <div>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Prepaid employee meal plans and accounts</p>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Automated order and queue management</p>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Subscription-based meal services</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+    </div>
+    <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
 
 
     <!-- Footer -->
