--- a/Industry_category_4.html
+++ b/Industry_category_4.html
@@ -240,7 +240,96 @@
     <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
 
 
+    <!-- Industry-category -->
+    <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
+    <div class="category-wrapper pt-4 pb-5">
+      <div class="container">
+        <div class="category-container pt-4">
 
+          <h2 class="text-center mb-4">Online & Emerging Restaurant Models</h2>
+          <div class="row">
+
+            <!-- Cloud Kitchens -->
+            <div class="col-12 col-md-6 col-lg-4 mb-3">
+              <div class="card section-card">
+                <img src="Images/industry.webp" alt="Cloud Kitchens" class="img-fluid">
+                <div class="card-body">
+                  <h5 class="card-title">Cloud Kitchens</h5>
+                  <div>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Optimized for delivery-only operations</p>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Shared kitchen spaces for cost efficiency</p>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Seamless third-party app integrations</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Virtual Restaurants -->
+            <div class="col-12 col-md-6 col-lg-4 mb-3">
+              <div class="card section-card">
+                <img src="Images/industry.webp" alt="Virtual Restaurants" class="img-fluid">
+                <div class="card-body">
+                  <h5 class="card-title">Virtual Restaurants</h5>
+                  <div>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Exclusive online presence with no physical space</p>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Multiple brands running from a single kitchen</p>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Low operational costs with high scalability</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Meal Subscription Services -->
+            <div class="col-12 col-md-6 col-lg-4 mb-3">
+              <div class="card section-card">
+                <img src="Images/industry.webp" alt="Meal Subscription Services" class="img-fluid">                
+                <div class="card-body">
+                  <h5 class="card-title">Meal Subscription Services</h5>
+                  <div>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Pre-planned meal deliveries with flexible options</p>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Personalized meal plans based on diet preferences</p>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Recurring revenue model for steady income</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Delivery-Only Brands -->
+            <div class="col-12 col-md-6 col-lg-4 mb-3">
+              <div class="card section-card">
+                <img src="Images/industry.webp" alt="Delivery-Only Brands" class="img-fluid">
+                <div class="card-body">
+                  <h5 class="card-title">Delivery-Only Brands</h5>
+                  <div>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Built for online food delivery marketplaces</p>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Optimized logistics for quick fulfillment</p>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Data-driven strategies to target local customers</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- AI-Driven Restaurants -->
+            <div class="col-12 col-md-6 col-lg-4 mb-3">
+              <div class="card section-card">
+                <img src="Images/industry.webp" alt="AI-Driven Restaurants" class="img-fluid">                
+                <div class="card-body">
+                  <h5 class="card-title">AI-Driven Restaurants</h5>
+                  <div>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Automated kitchens powered by AI</p>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>Smart menu suggestions based on customer data</p>
+                    <p><i class="fa-solid fa-circle-check pe-2"></i>AI-driven demand forecasting for inventory</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+    </div>
+    <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
 
 
     <!-- Footer -->
