--- a/Industry_category_1.html
+++ b/Industry_category_1.html
@@ -151,13 +151,13 @@
                 </li>
                 <li>
                   <a class="dropdown-item d-flex justify-content-between align-items-center" href="Industry_category_3.html">
-                    <span class="pe-3"><i class="fa-solid fa-earth-asia pe-2"></i>Large-Scale & Multi-Location Businesses</span> 
+                    <span class="pe-3"><i class="fa-solid fa-earth-asia pe-2"></i>Large-Scale Businesses</span> 
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
                 <li>
                   <a class="dropdown-item d-flex justify-content-between align-items-center" href="Industry_category_4.html">
-                    <span class="pe-3 pb-1"><i class="fa-solid fa-tablet-screen-button pe-2"></i>Online & Emerging Restaurant Models</span> 
+                    <span class="pe-3 pb-1"><i class="fa-solid fa-tablet-screen-button pe-2"></i>Emerging Restaurant Models</span> 
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
@@ -246,7 +246,7 @@
       <div class="container">
         <div class="category-container pt-4">
 
-          <h2 class="text-center mb-4">Enhancing Fast-Casual Dining Experiences</h2>
+          <h2 class="text-center mb-4 px-2">Enhancing Fast-Casual Dining Experiences</h2>
           <div class="row">
             <!-- QSRs -->
             <div class="col-12 col-md-6 col-lg-4 mb-3">
@@ -420,10 +420,10 @@
                     <a href="Industry_category_2.html"><i class="fa-regular fa-circle-right pe-2"></i>Premium & Full-Service Dining</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="Industry_category_3.html"><i class="fa-regular fa-circle-right pe-2"></i>Large-Scale & Multi-Location Businesses</a>
+                    <a href="Industry_category_3.html"><i class="fa-regular fa-circle-right pe-2"></i>Large-Scale Businesses</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="Industry_category_4.html"><i class="fa-regular fa-circle-right pe-2"></i>Online & Emerging Restaurant Models</a>
+                    <a href="Industry_category_4.html"><i class="fa-regular fa-circle-right pe-2"></i>Emerging Restaurant Models</a>
                   </li>
                 </ul>
               </div>
