--- a/Industry_category_3.html
+++ b/Industry_category_3.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Maghil | Large-Scale & Multi-Location Businesses</title>
+    <title>Maghil | Large-Scale Businesses</title>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -151,13 +151,13 @@
                 </li>
                 <li>
                   <a class="dropdown-item d-flex justify-content-between align-items-center" href="Industry_category_3.html">
-                    <span class="pe-3"><i class="fa-solid fa-earth-asia pe-2"></i>Large-Scale & Multi-Location Businesses</span> 
+                    <span class="pe-3"><i class="fa-solid fa-earth-asia pe-2"></i>Large-Scale Businesses</span> 
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
                 <li>
                   <a class="dropdown-item d-flex justify-content-between align-items-center" href="Industry_category_4.html">
-                    <span class="pe-3 pb-1"><i class="fa-solid fa-tablet-screen-button pe-2"></i>Online & Emerging Restaurant Models</span> 
+                    <span class="pe-3 pb-1"><i class="fa-solid fa-tablet-screen-button pe-2"></i>Emerging Restaurant Models</span> 
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
@@ -230,7 +230,7 @@
           <div class="overlay-1"></div>
           <div class="overlay-2"></div>
 
-          <h4 class="banner-text">Large-Scale & Multi-Location Businesses</h4>
+          <h4 class="banner-text">Large-Scale Businesses</h4>
           <h3 class="banner-tagLine">Unify your operations across all locations!</h3>
           <h6 class="banner-desc">Standardized workflows, centralized reporting, and real-time tracking for effortless management.</h6>
 
@@ -246,7 +246,7 @@
       <div class="container">
         <div class="category-container pt-4">
 
-          <h2 class="text-center mb-4">Large-Scale & Multi-Location Businesses</h2>
+          <h2 class="text-center mb-4 px-2">Unified Control for Multi-Store Chains</h2>
           <div class="row">
 
             <!-- Hotel Restaurants -->
@@ -406,10 +406,10 @@
                     <a href="Industry_category_2.html"><i class="fa-regular fa-circle-right pe-2"></i>Premium & Full-Service Dining</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="Industry_category_3.html"><i class="fa-regular fa-circle-right pe-2"></i>Large-Scale & Multi-Location Businesses</a>
+                    <a href="Industry_category_3.html"><i class="fa-regular fa-circle-right pe-2"></i>Large-Scale Businesses</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="Industry_category_4.html"><i class="fa-regular fa-circle-right pe-2"></i>Online & Emerging Restaurant Models</a>
+                    <a href="Industry_category_4.html"><i class="fa-regular fa-circle-right pe-2"></i>Emerging Restaurant Models</a>
                   </li>
                 </ul>
               </div>
